finished pokemon list screen

--- a/app/presentation/src/main/res/values/strings.xml
+++ b/app/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">presentation</string>
+    <string name="app_name">Pokemons</string>
+
+    <string name="pokemons_details">დეტალები</string>
 </resources>
